--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,6 @@
 .container {
   padding: 0 2rem;
+  background-color: #282c34;
 }
 
 .main {
@@ -8,8 +9,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .footer {
@@ -43,6 +42,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  color: whitesmoke;
 }
 
 .title,
